Update ArgumentScenarios.java
-enum and regex functionality
-polymorphism abstraction
-fixed some test cases